Fixed: Auto-scroll behavior caused by overflowed layout of sub-panel
(#920)

--- a/src/styles/themes/proton/sidebar/sub-panel.styl
+++ b/src/styles/themes/proton/sidebar/sub-panel.styl
@@ -6,17 +6,21 @@
 .SubPanel
   --nav-height: 30px
 
-  position: relative
+  position: absolute
   width: 100%
-  height: 0
+  height: 100%
   flex-shrink: 0
+  z-index: -1
+  overflow: hidden
+  transition: z-index var(--d-fast) var(--d-fast)
+.SubPanel[data-active="true"]
   z-index: 200
+  transition: z-index var(--d-fast)
 
 .SubPanel .overlay
   position: absolute
   width: 100%
   height: 0
-  top: -100vh
   background-color: var(--frame-bg)
   opacity: 0
   transition: opacity var(--d-fast)
@@ -28,7 +32,7 @@
   position: absolute
   display: flex
   flex-direction: column
-  top: 0
+  top: 100%
   max-height: var(--bookmarks-sub-panel-height)
   width: 100%
   background-color: var(--frame-bg)
